# violet-engine

./: .gitmodules  CMakeLists.txt  README.md
include/: violet_audio.hpp  violet_engine.hpp  violet_file.hpp  violet_font.hpp  violet_math.hpp  violet_matrix.hpp  violet_message.hpp  violet_resource.hpp  violet_scene.hpp  violet_shader.hpp  violet_sprite.hpp  violet_text.hpp  violet_texture.hpp  violet_types.hpp  violet_vector.hpp  violet_video.hpp  violet_window.hpp
source/: violet_audio.cpp  violet_audio_flac.cpp  violet_audio_internal.hpp  violet_audio_miniaudio.c  violet_audio_mp3.cpp  violet_audio_ogg.cpp  violet_audio_wav.cpp  violet_core.cpp  violet_core_internal.hpp  violet_engine_internal.hpp  violet_file.cpp  violet_file_internal.hpp  violet_font.cpp  violet_font_internal.hpp  violet_game_internal.hpp  violet_internal.hpp  violet_main.cpp  violet_math.cpp  violet_matrix.cpp  violet_matrix_2x2.cpp  violet_matrix_2x3.cpp  violet_matrix_2x4.cpp  violet_matrix_3x2.cpp  violet_matrix_3x3.cpp  violet_matrix_3x4.cpp  violet_matrix_4x2.cpp  violet_matrix_4x3.cpp  violet_matrix_4x4.cpp  violet_matrix_internal.hpp  violet_mesh.cpp  violet_mesh.hpp  violet_mesh_internal.hpp  violet_message.cpp  violet_message_internal.hpp  violet_pointer.cpp  violet_resource.cpp  violet_resource_internal.hpp  violet_scene.cpp  violet_shader.cpp  violet_shader.hpp  (+28 more)
source/glad/: glad.c  glad.h
